# arbitrage-spy

./: .env.example  .gitignore  Cargo.toml  README.md  TOKEN_USAGE.md  demo_tokens.json  tokens.db
data/: tokens.db  tokens.json
examples/: event_listener_config_demo.rs  test_pairs_db.rs  test_pairs_module.rs  token_demo.rs
schemas/: uniswap_v3.graphql
src/: arbitrage_chain.rs  cli.rs  config.rs  database.rs  event_listener.rs  lib.rs  log_adapter.rs  main.rs  monitor.rs  pair_manager.rs  pairs.rs  price_calculator.rs  realtime_monitor.rs  table_display.rs  thegraph.rs  token.rs  utils.rs
src/core/: arbitrage_chain.rs  exchange_graph.rs  mod.rs  types.rs
src/dex/: balancer.rs  curve.rs  mod.rs  pancakeswap.rs  sushiswap.rs  uniswap.rs
tests/: integration_tests.rs
